GeneratedCDK/cdk.out/Ec2InstanceStack.template.json
{
 "Parameters": {
  "InstanceType": {
   "Type": "String",
   "Default": "t3.micro",
   "Description": "EC2 instance type"
  },
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Resources": {
  "MyVpcF9F0CA6F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/Resource"
   }
  },
  "MyVpcpublicSubnet1Subnet75CA916A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet1/Subnet"
   }
  },
  "MyVpcpublicSubnet1RouteTable2E0CCC3A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet1/RouteTable"
   }
  },
  "MyVpcpublicSubnet1RouteTableAssociation6D520F26": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcpublicSubnet1RouteTable2E0CCC3A"
    },
    "SubnetId": {
     "Ref": "MyVpcpublicSubnet1Subnet75CA916A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcpublicSubnet1DefaultRoute1C88571A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    },
    "RouteTableId": {
     "Ref": "MyVpcpublicSubnet1RouteTable2E0CCC3A"
    }
   },
   "DependsOn": [
    "MyVpcVPCGW488ACE0D"
   ],
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet1/DefaultRoute"
   }
  },
  "MyVpcpublicSubnet1EIPA11A8EA3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet1/EIP"
   }
  },
  "MyVpcpublicSubnet1NATGateway1839A981": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVpcpublicSubnet1EIPA11A8EA3",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MyVpcpublicSubnet1Subnet75CA916A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MyVpcpublicSubnet1DefaultRoute1C88571A",
    "MyVpcpublicSubnet1RouteTableAssociation6D520F26"
   ],
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet1/NATGateway"
   }
  },
  "MyVpcpublicSubnet2Subnet87EBD23B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet2/Subnet"
   }
  },
  "MyVpcpublicSubnet2RouteTable18FD0DBF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet2/RouteTable"
   }
  },
  "MyVpcpublicSubnet2RouteTableAssociation2BD1A73B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcpublicSubnet2RouteTable18FD0DBF"
    },
    "SubnetId": {
     "Ref": "MyVpcpublicSubnet2Subnet87EBD23B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcpublicSubnet2DefaultRoute203C8627": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    },
    "RouteTableId": {
     "Ref": "MyVpcpublicSubnet2RouteTable18FD0DBF"
    }
   },
   "DependsOn": [
    "MyVpcVPCGW488ACE0D"
   ],
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/publicSubnet2/DefaultRoute"
   }
  },
  "MyVpcprivateSubnet1Subnet3E5A1110": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet1/Subnet"
   }
  },
  "MyVpcprivateSubnet1RouteTableCBD023BE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet1/RouteTable"
   }
  },
  "MyVpcprivateSubnet1RouteTableAssociation260F1146": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcprivateSubnet1RouteTableCBD023BE"
    },
    "SubnetId": {
     "Ref": "MyVpcprivateSubnet1Subnet3E5A1110"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcprivateSubnet1DefaultRouteB04056EC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcpublicSubnet1NATGateway1839A981"
    },
    "RouteTableId": {
     "Ref": "MyVpcprivateSubnet1RouteTableCBD023BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet1/DefaultRoute"
   }
  },
  "MyVpcprivateSubnet2Subnet372894AA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet2/Subnet"
   }
  },
  "MyVpcprivateSubnet2RouteTableB9EC50DF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet2/RouteTable"
   }
  },
  "MyVpcprivateSubnet2RouteTableAssociationBC4A677C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcprivateSubnet2RouteTableB9EC50DF"
    },
    "SubnetId": {
     "Ref": "MyVpcprivateSubnet2Subnet372894AA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcprivateSubnet2DefaultRoute85C85F0F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcpublicSubnet1NATGateway1839A981"
    },
    "RouteTableId": {
     "Ref": "MyVpcprivateSubnet2RouteTableB9EC50DF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/privateSubnet2/DefaultRoute"
   }
  },
  "MyVpcIGW5C4A4F63": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/IGW"
   }
  },
  "MyVpcVPCGW488ACE0D": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    },
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyVpc/VPCGW"
   }
  },
  "InstanceSecurityGroup896E10BF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for EC2 instance",
    "GroupName": "ec2-instance-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH access from any IP",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/InstanceSecurityGroup/Resource"
   }
  },
  "InstanceRole3CCE2F1D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/CloudWatchAgentServerPolicy"
       ]
      ]
     }
    ],
    "RoleName": "ec2-instance-role"
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/InstanceRole/Resource"
   }
  },
  "MyInstanceInstanceProfile2784C631": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "InstanceRole3CCE2F1D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyInstance/InstanceProfile"
   }
  },
  "MyInstanceA12EC128": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "VolumeSize": 20
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "MyInstanceInstanceProfile2784C631"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": {
     "Ref": "InstanceType"
    },
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "InstanceSecurityGroup896E10BF",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "MyVpcpublicSubnet1Subnet75CA916A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Ec2InstanceStack/MyInstance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "InstanceRole3CCE2F1D"
   ],
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/MyInstance/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/1VO0W6DMAz8lr6HbKOt9lxVU8XLFsHU18lkruoWHJQ4Qwjx7xNlgPZ057uzfalO96/6eQNtSOz3Pamo1H0hYO/qeGEDHmoU9Ara8NWjTXV/buxonc1RmVhWZItYMsqorSx3UfATygpXPV+0QwjOEgg5XsIjecvMCO8gJxBsoVPG0w8IroczFvSMS2Bq8jcdRMBea2RRBdroSbqTd7F5dPgnZBwE2D6+znxQBLXuczeVnnG2jXcXqnAYVI7BRT8tf0RpogzKdHJ1/LTVLzu939wCUeIjC9Wo8wl/Ab0M4sBqAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "Ec2InstanceStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "InstanceId": {
   "Description": "The instance ID of the EC2 instance",
   "Value": {
    "Ref": "MyInstanceA12EC128"
   }
  },
  "InstancePublicIp": {
   "Description": "Public IP address of the EC2 instance",
   "Value": {
    "Fn::GetAtt": [
     "MyInstanceA12EC128",
     "PublicIp"
    ]
   }
  },
  "InstancePrivateIp": {
   "Description": "Private IP address of the EC2 instance",
   "Value": {
    "Fn::GetAtt": [
     "MyInstanceA12EC128",
     "PrivateIp"
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
